<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/custom_toast_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Quiz area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/questionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:onClick="goToNext"
            android:text="@string/questionText"
            android:textAlignment="center"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/questionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="goToNext"
            android:padding="24dp"
            android:text="@string/questionText"
            android:textAlignment="center"
            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/trueBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trueBtn" />

            <Button
                android:id="@+id/falseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/falseBtn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/hintBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hintBtn" />

        </LinearLayout>

    </LinearLayout>

    <!-- Next & Prev button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:clickable="false"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_back_24dp"
            android:text="@string/prevBtn" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:clickable="false"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_forward_24dp"
            android:text="@string/nextBtn" />

    </LinearLayout>

</LinearLayout>

